--- a/components.css
+++ b/components.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
+
+/* -------------------------------- Variables -------------------------------- */
 :root {
-  primary-color: rgb(43, 217, 132);
-  secondary-color: #010a13;
+  --primary-color: #2bd984;
+  --secondary-color: #010a13;
 }
+/* ---------------------------- Resetting Styles ---------------------------- */
 body,
 *,
 ::after,
@@ -9,6 +13,57 @@ body,
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 body {
+  color: var(--secondary-color);
+  padding: 100px;
 }
+hr {
+  margin: 20px 0;
+}
+a {
+  text-decoration: none;
+}
+/* ------------------------------- Containers ------------------------------- */
+.container {
+  padding: 2rem 1rem;
+}
+.container-center {
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+}
+.container-fluid {
+  display: flex;
+}
+/* ---------------------------------- Button and Links --------------------------------- */
+
+.button {
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+.button-primary {
+  border: 1px solid var(--primary-color);
+  background-color: var(--primary-color);
+  color: #fff;
+}
+.link-primary {
+  color: #fff;
+}
+.button-secondary {
+  border: 1px solid var(--primary-color);
+  background-color: #fff;
+}
+.link-secondary {
+  color: var(--primary-color);
+}
+/* ---------------------------------- Lists --------------------------------- */
+.list-bulletless {
+  list-style: none;
+}
+.list-inline > li {
+  display: inline;
+}
+/* --------------------------------- Navbar --------------------------------- */
