--- a/components.css
+++ b/components.css
@@ -4,6 +4,8 @@
 :root {
   --primary-color: #2bd984;
   --secondary-color: #010a13;
+  --dark-gray: #1c1917;
+  --offwhite: #f3f4f6;
 }
 /* ---------------------------- Resetting Styles ---------------------------- */
 body,
@@ -19,6 +21,10 @@ body {
   color: var(--secondary-color);
   padding: 100px;
 }
+h1,
+h2 {
+  color: var(--dark-gray);
+}
 hr {
   margin: 20px 0;
 }
@@ -27,10 +33,10 @@ a {
 }
 /* ------------------------------- Containers ------------------------------- */
 .container {
-  padding: 2rem 1rem;
+  padding: 4rem 2rem;
 }
 .container-center {
-  text-align: center;
+  /* text-align: center; */
   max-width: 600px;
   margin: 0 auto;
 }
@@ -67,3 +73,41 @@ a {
   display: inline;
 }
 /* --------------------------------- Navbar --------------------------------- */
+nav {
+  background-color: var(--primary-color);
+  color: #fff;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 3rem 2rem;
+  gap: 10px 0;
+}
+nav .list-inline {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 50px;
+}
+nav a {
+  color: #fff;
+}
+
+/* ------------------------------- Hero Header ------------------------------ */
+.header-photo {
+  width: 100%;
+}
+.hero-title {
+  font-size: 2.5rem;
+  padding: 2rem 0;
+}
+.highlight {
+  color: var(--primary-color);
+}
+/* --------------------------------- Section -------------------------------- */
+section {
+}
+section h2 {
+  text-align: center;
+}
+section.offwhite {
+  background-color: var(--offwhite);
+}
