--- a/styles.css
+++ b/styles.css
@@ -119,11 +119,18 @@ nav .logo {
   padding-top: 4rem;
   padding-bottom: 2rem;
 }
+.project-header {
+  text-align: center;
+  padding-top: 2rem;
+}
 .header-photo {
   width: 100%;
 }
+.projects-title,
 .hero-title {
   font-size: 2.5rem;
+}
+.hero-title {
   padding: 2rem 0;
 }
 .highlight {
@@ -133,6 +140,9 @@ nav .logo {
 
 section h2 {
   text-align: center;
+}
+section ol h2 {
+  text-align: left;
 }
 section.offwhite {
   background-color: var(--offwhite);
